[package]
name = "oml-storage"
version = "0.1.1-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"
description = "A very basic commandline tool to download AWS EC2/EBS snapshots."
readme = "README.md"
homepage = "https://github.com/AndreasOM/oml-storage"
repository = "https://github.com/AndreasOM/oml-storage"
keywords = ["database", "storage", "backend"]
categories = ["database"]

exclude = [
    ".github",
    ".gitignore",
]

[[bin]]
name="oml-storage-demo"
path="src/demo_main.rs"

[dependencies]
async-trait = "0.1.75"
aws-config = "1.1.1"
aws-sdk-dynamodb = "1.9.0"
chrono = { version = "0.4.31", features = ["serde"] }
color-eyre = "0.6.2"
nanoid = "0.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
