[package]
name = "oml-storage"
version = "0.1.9-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"
description = "A very simple wrapper to handle locked storage of items."
readme = "README.md"
homepage = "https://github.com/AndreasOM/oml-storage"
repository = "https://github.com/AndreasOM/oml-storage"
keywords = ["database", "storage", "backend"]
categories = ["database"]

exclude = [
    ".github",
    ".gitignore",
]

[[bin]]
name="oml-storage-demo"
path="src/demo_main.rs"

[dependencies]
async-trait = "0.1.77"
aws-config = { version = "1.1.1", default-features = false }
aws-sdk-dynamodb = { version = "1.9.0", default-features = false }
chrono = { version = "0.4.31", features = ["now", "serde"], default-features = false }
clap = { version = "4.4.12", features = ["derive", "std"], default-features = false }
color-eyre = { version = "0.6.2", default-features = false }
nanoid = "0.4.0"
serde = { version = "1.0.193", default-features = false, features = ["serde_derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["fs", "io-std", "io-util", "macros", "net", "parking_lot", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
