[package]
name = "oml-storage"
version = "0.3.1-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"
description = "A very simple wrapper to handle locked storage of items."
readme = "README.md"
homepage = "https://github.com/AndreasOM/oml-storage"
repository = "https://github.com/AndreasOM/oml-storage"
keywords = ["database", "storage", "backend"]
categories = ["database"]

exclude = [
    ".github",
    ".gitignore",
]

[[bin]]
name="oml-storage-demo"
path="src/demo_main.rs"

[features]
default = [ "dynamo-db", "metadata" ]
metadata = []
dynamo-db = [ "aws-sdk-dynamodb/rt-tokio", "aws-sdk-dynamodb/rustls" ]
# dynamo-db = [ ]

[dependencies]
async-trait = "0.1.77"
aws-config = { version = "1.1.1", default-features = false }
aws-sdk-dynamodb = { version = "1.9.0", default-features = false, features = ["rt-tokio", "rustls"] }
chrono = { version = "0.4.31", features = ["now", "serde"], default-features = false }
clap = { version = "4.4.12", features = ["derive", "std"], default-features = false }
color-eyre = { version = "0.6.2", default-features = false }
nanoid = "0.4.0"
serde = { version = "1.0.193", default-features = false, features = ["serde_derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "time"] }
tracing = { version = "0.1.40", default-features = false }
tracing-error = { version = "0.2.0", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"], default-features = false }
